# dev-coach

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SKILL.md  biome.json  devcoach.spec  mkdocs.yml  package-lock.json  package.json  pyproject.toml  server.json  sonar-project.properties  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: export_backup.py  take_screenshots.py
.github/workflows/: ci.yml  cla.yml  docs.yml  release.yml  ruff-autofix.yml  update-screenshots.yml
assets/: SKILL.md  lesson-format.md
assets/references/: calibration.md  onboarding.md  review.md
assets/static/: relative-time.js
docs/: PLAN.md  claude-code-plugin.md  cli.md  configuration.md  faq.mdx  getting-started.md  how-it-works.md  index.md  index.mdx  mcp-server.md  vision.md  web-ui.md  why.md
docs/install/: claude-ai.md  claude-code-plugin.md  claude-desktop.md  codex.md  gemini-cli.md  homebrew.md  index.md  npx.md  other-agents.md
docs/reference/: configuration.md  license.md  mcp-server.md  privacy.md
docs/usage/: cli.md  coaching.md  web-ui.md
gemini-extension/: README.md  gemini-extension.json  package.json
gemini-extension/hooks/: hooks.json
gemini-extension/scripts/: launch.mjs
gemini-extension/skills/devcoach/: SKILL.md
gemini-extension/skills/devcoach/references/: calibration.md  onboarding.md
mcpb/: manifest.json
plugin/: .mcp.json  README.md  package.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: launch.mjs
plugin/skills/devcoach/: SKILL.md
plugin/skills/devcoach/references/: calibration.md  review.md
scripts/: build-gemini-extension.mjs  build-mcpb.mjs  build-plugin-zip.mjs  e2e-claude.mjs  generate_homebrew_formula.py  homebrew-formula.mjs  inject_bottle_block.py  screenshots.mjs  sync-plugin.mjs  update-marketplace.mjs
src/: bin.ts  skill.ts  version.ts
src/cli/: commands.ts  hooks.ts  install.ts  term.ts
src/core/: claude-history.ts  coach.ts  db.ts  detect.ts  git.ts  models.ts  prompts.ts
src/devcoach/: SKILL.md  __init__.py
src/devcoach/cli/: commands.py
src/devcoach/core/: coach.py  db.py  detect.py  git.py  models.py  prompts.py
src/devcoach/mcp/: server.py
src/devcoach/web/: app.py
src/devcoach/web/static/: style.css
src/devcoach/web/templates/: base.html  lesson_detail.html  lessons.html  profile.html  settings.html
src/mcp/: server.ts
src/web/: app.ts  views.ts
tests/: claude-history.test.ts  cli.test.ts  conftest.py  core.test.ts  db-extra.test.ts  gemini-extension.test.ts  git.test.ts  hooks-spawn.test.ts  hooks.test.ts  mcp.test.ts  plugin.test.ts  setup-wizard.test.ts  setup.ts  test_cli.py  test_cli_commands.py  test_coach.py  test_db_extra.py  test_detect.py  test_git.py  test_mcp_server.py  test_prompts.py  test_web.py  test_web_extra.py  web.test.ts
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/scripts/: og-card.html
website/src/components/ThemedShot/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: landing.mdx
website/static/: llms.txt  robots.txt
