[project]
name = "devcoach"
version = "0.1.0"
description = "A local MCP server that acts as a progressive technical coach"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.scripts]
devcoach = "devcoach.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcoach"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
