[project]
name = "devcoach"
version = "0.3.7"
description = "A local MCP server that acts as a progressive technical coach for Claude Code and Claude Desktop"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "UltimaPhoenix", email = "2079222+UltimaPhoenix@users.noreply.github.com" },
]
keywords = ["mcp", "claude", "coaching", "ai", "developer-tools", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/UltimaPhoenix/dev-coach"
Repository = "https://github.com/UltimaPhoenix/dev-coach"
Issues = "https://github.com/UltimaPhoenix/dev-coach/issues"
Changelog = "https://github.com/UltimaPhoenix/dev-coach/releases"

[project.scripts]
devcoach = "devcoach.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcoach"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/devcoach"]
omit = ["tests/*"]

[tool.coverage.report]
omit = ["tests/*"]
